fix: improve responsive layout homepage on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -430,7 +430,7 @@ body::-webkit-scrollbar-thumb:hover {
 
   .split-hero-option {
     position: relative;
-    min-height: 100%;
+    min-height: 0;
     border-color: transparent;
   }
 
